--- a/views/user/ordersummary.ejs
+++ b/views/user/ordersummary.ejs
@@ -20,7 +20,7 @@
 
     <div class="flex flex-col md:flex-row gap-6">
 
-        <!-- LEFT SIDEBAR (unchanged from your page) -->
+        <!-- LEFT SIDEBAR  -->
         <div class="w-full md:w-1/3 lg:w-1/4">
             <div class="bg-white rounded-lg shadow p-6 mb-6">
                 <div class="flex flex-col items-center mb-6">
@@ -111,7 +111,6 @@
             <th class="p-2">Product</th>
             <th class="p-4">Qty</th>
             <th class="p-4">Price</th>
-            <th class="p-4">Discount</th>
             <th class="p-4">Status</th>
             <th class="p-4">Ordered</th>
             <th class="p-4">Delivered</th>
@@ -149,10 +148,6 @@
                 <!-- TOTAL PRICE -->
                 <td class="p-3">₹<%= order.totalAmount %></td>
 
-                <!-- DISCOUNT (sum of all product discounts) -->
-                <td class="p-3">
-                    <%= Math.round(order.items.reduce((sum, i) => sum + i.discount, 0) / order.items.length) %>%
-                </td>
 
                 <!-- STATUS -->
                 <td class="p-3">
